--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@
 
 /* font-face */
 @font-face {
-  font-family: "AccessibilityFoundicons";
+  font-family: "COAccessibilityFoundicons";
   src: url("fonts/accessibility_foundicons.eot");
   src: url("fonts/accessibility_foundicons.eot?#iefix") format("embedded-opentype"), url("fonts/accessibility_foundicons.woff") format("woff"), url("../fonts/accessibility_foundicons.ttf") format("truetype"), url("fonts/accessibility_foundicons.svg#AccessibilityFoundicons") format("svg");
   font-weight: normal;
@@ -119,7 +119,7 @@
 }
 
 [class*="co-foundicon-"]:before {
-  font-family: "AccessibilityFoundicons";
+  font-family: "COAccessibilityFoundicons";
   font-weight: normal;
   font-style: normal;
   text-decoration: inherit;
