--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+.pane-content {
+  width: calc(100% - 256px);
+}
+
+
+
+
+
+
 .co-icon {
     font-size: 20px;
 }
@@ -19,10 +28,9 @@
     top: 0;
     right: 0;
     height: 100%;
-    width: 200px;
     z-index: 10000000;
     overflow: hidden;
-    min-width: 100px;
+    min-width: 256px;
 /*    margin-right: 20px;*/
     display: none;
 }
@@ -77,7 +85,7 @@
 }
 
 .code-overview-wrapper .slider {
-    width: 140px !important;
+    width: 196px !important;
     float:left;
     height: 100%;
     margin-left: 10px !important;
